<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo_app"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_dicoding_story"
        android:src="@drawable/logo_app_baii1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_logo_app"
        app:layout_constraintStart_toStartOf="@id/iv_logo_app"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_app"
        tools:text="Login" />


    <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:background="@drawable/custom_edit_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="@id/iv_logo_app"
        app:layout_constraintStart_toStartOf="@id/iv_logo_app"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <com.dicoding.storyapp.view.customview.CustomEditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="@id/ed_login_email"
        app:layout_constraintStart_toStartOf="@id/ed_login_email"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@id/ed_login_password"
        app:layout_constraintStart_toStartOf="@id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        tools:text="Sign In" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <TextView
        android:id="@+id/tv_belum_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/belum_punya_akun"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_belum_punya_akun"
        tools:text="Sign Up" />


    <ProgressBar
        android:id="@+id/pb_loading_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:indeterminateTint="@color/blue_dark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>